# locations

./: .gitignore  CLAUDE.md  DEPLOY_INSTRUCTIONS.md  README.md
.github/workflows/: deploy.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
ios/LocationTracker/LocationTracker/: Info.plist  LocationTrackerApp.swift
ios/LocationTracker/LocationTracker.xcodeproj/: project.pbxproj
ios/LocationTracker/LocationTracker/Models/: LocationPoint.swift  Place.swift  TestData.swift  User.swift  Visit.swift
ios/LocationTracker/LocationTracker/Services/: APIService.swift  BluetoothService.swift  LocationService.swift  Log.swift
ios/LocationTracker/LocationTracker/Views/: ContentView.swift  DeviceSelectionView.swift  FrequentPlacesView.swift  LoginView.swift  SettingsView.swift  TrackingView.swift  VisitsView.swift
ios/LocationTracker/LocationTrackerTests/: ModelTests.swift
ios/Locationz/Locationz/: Info.plist  LocationzApp.swift
ios/Locationz/Locationz.xcodeproj/: project.pbxproj
ios/Locationz/Locationz/Models/: Device.swift  Visit.swift
ios/Locationz/Locationz/Services/: APIService.swift  LocationService.swift
ios/Locationz/LocationzTests/: ModelTests.swift
server/: .env.example  Dockerfile  Makefile  api.py  auth.py  database.py  docker-compose.yml  main.py  models.py  pages.py  processing.py  pyproject.toml  requirements.txt  seed_test_data.py
server/scripts/: data_transfer.py
server/tests/: conftest.py  gps_test_fixtures.py  test_api.py  test_processing.py
(+56 files in other folders)
