[project]
name = "locationz"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=1.4.0",
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "httpx>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["."]
